# squak-lab

./: .clang-format  .gitignore  CMakeLists.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
assets/: cube.glb
cmake/: grammar.cmake  headertool.cmake
lib/include/glad/: gl.h
scripts/: build.ps1  cmake.ps1  env.ps1  install.ps1  logviewer.ps1  make.ps1  vs.ps1
